--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@types/express": "^4.17.13",
+    "class-validator": "^0.13.2",
     "express": "^4.18.1",
     "pg": "^8.7.3",
     "ts-node": "^10.8.1",
