--- a/package.json
+++ b/package.json
@@ -11,13 +11,17 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
+    "@types/jsonwebtoken": "^8.5.8",
     "nodemon": "^2.0.18",
     "typescript": "^4.7.4"
   },
   "dependencies": {
     "@types/express": "^4.17.13",
+    "bcrypt": "^5.0.1",
     "class-validator": "^0.13.2",
     "express": "^4.18.1",
+    "jsonwebtoken": "^8.5.1",
     "pg": "^8.7.3",
     "ts-node": "^10.8.1",
     "typeorm": "^0.3.6"
