--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start-dev": "nodemon src/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon --watch './**/*.ts' --exec 'ts-node' src/index.ts",
-    "build": "tsc --build"
+    "postinstall": "tsc"
   },
   "keywords": [],
   "author": "",
